--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tsc && node dist/index.js",
+    "build": "npx tsc",
     "cancel": "npx tsc && node dist/scripts/cancel.js"
   },
   "keywords": [],
