--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Pull latest changes and restart application
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/filament.pem ubuntu@ec2-54-221-5-129.compute-1.amazonaws.com << 'EOF'
-            cd /path/to/your/app
-            git pull origin main
+            cd /Market-Maker-Bot
+            git pull 
             npm install
             npm run dev
           EOF
