--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,7 @@ jobs:
             cd Market-Maker-Bot
             git pull 
             npm install
-            npm run dev
+            npm run dev > app.log 2>&1 &
+            sleep 5
+            echo "Application started successfully."
           EOF
